[build-system]
requires = ["setuptools>=42", "setuptools_scm", "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "dxlib"
dynamic = ["version", "dependencies", "readme"]
requires-python = ">=3.9"
authors = [
    { name = "Rafael Zimmer", email = "rzimmerdev@gmail.com" }
]
description = "dxlib description here"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { homepage = "https://github.com/divergex/dxlib" }

[tool.setuptools.packages.find]
where = ["."]
include = ["dxlib*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.poetry]
version = "0.0.0"
[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
