[build-system]
requires = [
    "setuptools>=77.0.3",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dxlib"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
    { name = "Rafael Zimmer", email = "rzimmerdev@gmail.com" }
]
description = "A library for quantitative finance, with tools for data handling, network interfacing, and mathematical modeling."
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
urls = { homepage = "https://github.com/divergex/dxlib" }
dependencies = [
    "cloudscraper~=1.2.71",
    "fastapi~=0.116.1",
    "h5py~=3.14.0",
    "httpx~=0.28.1",
    "ibapi~=9.81.1.post1",
    "llist>=0.7.1",
    "lxml>=6.0.0",
    "matplotlib~=3.9.4",
    "numpy~=2.1.3",
    "pandas~=2.2.2",
    "pandas-stubs>=2.3.0.250703",
    "pydantic~=2.11.5",
    "pytest>=9.0.1",
    "requests~=2.32.3",
    "scipy~=1.15.1",
    "sortedcontainers>=2.4.0",
    "starlette~=0.47.2",
    "statsmodels~=0.14.4",
    "transaction>=5.0",
    "uvicorn~=0.34.0",
]

[tool.setuptools.packages.find]
include = ["dxlib"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
    "setuptools-scm>=8.3.1",
    "pyright>=1.1.403",
    "pytest>=9.0.1",
    "black>=25.11.0",
    "mypy>=1.18.2",
]
